2017-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0: Ta Nehisi';git push
	git tag -a 4.7.0 -m 'ncremap/ncclimo dfl_lvl, fl_fmt;ncclimo ppc;nco_map/msh_mk();ncra/ncrcat neg hyp;quiet CDF5, ncrename';git push --tags

2017-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0-beta01: Hairy Yoda';git push
	git tag -a 4.7.0-beta01 -m 'Verified CMake on Windows';git push --tags

2017-11-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0-alpha04: Mag-unsafe';git push
	git tag -a 4.7.0-alpha04 -m 'ncrename quiet, ncremap dfl_lvl, ncclimo ppc';git push --tags

	* Fix ncrename regressions caused by 20171029 change

	* Update documentation and homepage and nco_netcdf.c regarding CDF5 bug and netCDF 4.5.0

	* Implement but do not document ppc in ncremap, option currently does nothing
	Would not be too hard to finish, but unclear that PPC is appropriate for ncremap

	* Test and document ncclimo --ppc

2017-10-31  Charlie Zender  <zender@uci.edu>

	* Add ppc option to ncclimo

2017-10-29  Charlie Zender  <zender@uci.edu>

	* Quiet ncrename: As per PJCS request, summary renaming only prints with dbg_lvl > 0

2017-10-25  Charlie Zender  <zender@uci.edu>

	* Add, document, and test -L dfl_lvl option to ncremap

2017-10-22  Charlie Zender  <zender@uci.edu>

	* Add att_var_jsn to in.cdl in_grp.cdl to demonstrate JSON formats

2017-10-20  Charlie Zender  <zender@uci.edu>

	* Add CF2 Out-of-Group search algorithm figure alg_cf2_oog.pptx

2017-10-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0-alpha03: Ultrasonic Curtains';git push
	git tag -a 4.7.0-alpha03 -m 'nco_map/msh_mk() routines;ncclimo deflate';git push --tags

2017-10-13  Charlie Zender  <zender@uci.edu>

	* Create nco_msh_mk() to compute overlap mesh
