@@ -1,10 +1,12 @@
-2017-11-07  Charlie Zender  <zender@uci.edu>
+2017-11-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.7.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.7.0: Ta Nehisi';git push
 	git tag -a 4.7.0 -m 'ncremap/ncclimo dfl_lvl, fl_fmt;ncclimo ppc;nco_map/msh_mk();ncra/ncrcat neg hyp;quiet CDF5, ncrename';git push --tags
 
 2017-11-07  Charlie Zender  <zender@uci.edu>
+
+	* Add pre-emptive numeric codes for netCDF library versions 4.5.2--4.5.3
 
 	* NCO 4.7.0-beta01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.7.0-beta01: Hairy Yoda';git push
